creusot/tests/should_fail/prusti/index_invalid.stderr
error[creusot]: expected `std::vec::Vec<T>` found `creusot_contracts::__stubs::__prusti::Zombie<std::vec::Vec<T>>`
 --> index_invalid.rs:5:22
  |
5 | #[ensures(*result == old(*v)@[0])]
  |                      ^^^^^^^

error: aborting due to previous error

